--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~font-awesome/css/font-awesome.min.css";
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
+@import "~izitoast/dist/css/iziToast.min.css";
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 .inputs{
     outline: 0;
