--- a/src/app/department/components/department-container/department-container.component.html
+++ b/src/app/department/components/department-container/department-container.component.html
@@ -1,6 +1,5 @@
 <app-sidenav>
-  <div style="padding: 30px; filter: contrast(150%); height:100%; height:100vh;">
-  <mat-card style="padding:40px;" *ngIf="neededData$ | async">
+  <div class="container p-4 bg-white" *ngIf="neededData$ | async">
     <span class="h4">Departments</span>
     <mat-tab-group>
       <mat-tab
@@ -16,10 +15,10 @@
           ></app-empty-state>
           <div class="row g-2">
             <div class="col-lg-6" *ngFor="let member of department.members">
-              <mat-card style="filter:contrast(110%);">
               <div
-                class="p-4 my-1 d-flex justify-content-between"
+                class="shadow-md p-4 border my-1 d-flex justify-content-between"
                 style="
+                  border: 1px solid gray;
                   border-left: 5px solid #d05834 !important;
                   width: 100%;
                 "
@@ -71,15 +70,13 @@
                 <div>
                   <div></div>
                 </div>
-                </div>
-              </mat-card>
+              </div>
             </div>
           </div>
-        </mat-card>
+        </div>
       </mat-tab>
     </mat-tab-group>
-  </mat-card>
-</div>
+  </div>
   <app-spinner *ngIf="isLoading"></app-spinner>
   <app-reload-page *ngIf="!isLoading && errorInit"></app-reload-page>
 </app-sidenav>
