with landing page and pop up message

--- a/src/app/account/account-list/account-list.component.html
+++ b/src/app/account/account-list/account-list.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <header>
+    <span class="h3">Accounts</span>
+  </header>
   <table class="table">
     <thead>
       <tr>
