--- a/src/app/curriculum/components/year-dropdown/year-dropdown.component.html
+++ b/src/app/curriculum/components/year-dropdown/year-dropdown.component.html
@@ -1032,7 +1032,7 @@
 <table
   class="table-elective table table-bordered table-striped mt-2"
   style="max-width: 600px"
-  *ngIf="!!showElectiveTable().length && department != '2'"
+  *ngIf="!!showElectiveTable().length && department == '1'"
 >
   <thead class="thead-dark">
     <tr>
