--- a/src/app/subject/components/subject-list/subject-list.component.html
+++ b/src/app/subject/components/subject-list/subject-list.component.html
@@ -198,7 +198,7 @@
             </tbody>
           </table>
 
-          <table class="table">
+          <table class="table table-bordered">
             <thead>
               <tr>
                 <th>#</th>
