--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -6,12 +6,11 @@
     min-height: 100vh;
 }
 .container{
-    /* padding-left: 50px; */
 
-    background-color: white;
+    /* background-color: white;
     width: 500px;
     height: 100vh;
-    float: left;
+    float: left; */
 }
 h3{
     margin-top: 20px;
@@ -25,8 +24,7 @@ span{
 }
 .inputs{
     width: 335px;
-    /* padding: 5px;
-    opacity: 50%; */
+
 }
 .logos{
     width: 100px;
@@ -34,8 +32,7 @@ span{
 .button{
     border-width: 0px;
     width: 100%;
-    /* height: 50px; */
-    /* border-radius: 1.2rem; */
+
     background-color: #D05834 !important;
     color: white;
     font-family: 'century gothic';
