--- a/src/app/subject/components/subject-add-dialog/subject-add-dialog.component.html
+++ b/src/app/subject/components/subject-add-dialog/subject-add-dialog.component.html
@@ -14,7 +14,25 @@
         id="form"
       >
         <div class="d-flex gap-2 align-items-center">
-          <mat-form-field appearance="fill">
+          <div class="form-floating mb-3">
+            <select
+              class="form-select shadow-none"
+              name="departmentId"
+              style="margin-right: 20px"
+              [(ngModel)]="department"
+              (change)="departmentOnChange()"
+            >
+              <option
+                *ngFor="let department of departments"
+                [value]="department.id"
+              >
+                {{ department.department_code | uppercase }}
+              </option>
+              <option value="">None</option>
+            </select>
+            <label for="departmentId">Department</label>
+          </div>
+          <!-- <mat-form-field appearance="fill">
             <mat-label>Department</mat-label>
             <mat-select
               name="departmentId"
@@ -28,7 +46,7 @@
               >
               <mat-option value=""> None </mat-option>
             </mat-select>
-          </mat-form-field>
+          </mat-form-field> -->
           <mat-checkbox
             color="primary"
             [(ngModel)]="isElective"
@@ -37,17 +55,35 @@
             >Elective</mat-checkbox
           >
         </div>
+        <div class="form-floating mb-3" *ngIf="isElective">
+          <select class="form-select shadow-none" name="description" ngModel>
+            <option *ngFor="let x of [1, 2, 3, 4, 5]" [value]="x" selected>
+              {{ "Elective " + x }}
+            </option>
+          </select>
+          <label for="elective">Elective</label>
+        </div>
 
-        <mat-form-field appearance="fill" *ngIf="isElective">
+        <!-- <mat-form-field appearance="fill" *ngIf="isElective">
           <mat-label>Elective</mat-label>
           <mat-select name="description" ngModel>
             <mat-option *ngFor="let x of [1, 2, 3, 4, 5]" [value]="x">{{
               "Elective " + x
             }}</mat-option>
           </mat-select>
-        </mat-form-field>
+        </mat-form-field> -->
 
-        <mat-form-field class="example-full-width">
+        <div class="form-floating mb-3">
+          <input
+            class="form-control shadow-none"
+            placeholder="Subject Code"
+            name="subjectCode"
+            ngModel
+          />
+          <label for="subjectCode">Subject Code</label>
+        </div>
+
+        <!-- <mat-form-field class="example-full-width">
           <mat-label>Subject Code</mat-label>
           <input
             matInput
@@ -55,9 +91,18 @@
             name="subjectCode"
             ngModel
           />
-        </mat-form-field>
+        </mat-form-field> -->
+        <div class="form-floating mb-3" *ngIf="!isElective">
+          <input
+            class="form-control shadow-none"
+            placeholder="Description"
+            name="description"
+            ngModel
+          />
+          <label for="description">Description</label>
+        </div>
 
-        <mat-form-field
+        <!-- <mat-form-field
           class="example-full-width"
           name="description"
           ngModel
@@ -70,7 +115,7 @@
             name="description"
             ngModel
           />
-        </mat-form-field>
+        </mat-form-field> -->
 
         <input
           name="syllabus"
