--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
 @import "~font-awesome/css/font-awesome.min.css";
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import "~izitoast/dist/css/iziToast.min.css";
 .inputs{
     outline: 0;
     border-width: 0 0 2px;
